@@ -6,7 +6,10 @@ AC_PROG_ARCHIVE
 AC_PROG_ARCHIVE_ADD
 AC_PROG_RANLIB
 AC_PROG_INSTALL
+V5_SHARED_LIB_OBJS
+SubdirLibraryRule([${OBJS}])
 AppendRule([all:: libdes425.a])
+V5_MAKE_SHARED_LIB(libdes425)
 KRB_INCLUDE
 WITH_KRB5ROOT
 V5_AC_OUTPUT_MAKEFILE
